--- a/index.html
+++ b/index.html
@@ -3,34 +3,35 @@
   <head>
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
+    <!-- <script src="bower_components/moment/moment.js"></script> -->
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Github API</title>
   </head>
   <body>
+    <header>
+      <h1>Github API Snooper</h1>
+    </header>
     <div class="overLord">
-      <header>
-        <h1>Github API</h1>
-      </header>
       <div class="column1">
         <p>Enter a user name and see their repositories!</p>
         <label for="gitUserName">Enter a user name:</label>
         <input id="gitUserName" type="text">
         <button class="btn-success" id="buttonSubmit">Snoop Around</button>
-        <div class="showResult">
-        </div>
-
+        <h3>Here are your results, snooper</h3>
+        <ol>
+          <div class="results"></div>
+        </ol>
       </div>
       <div class="column2">
         <h3>Try some of these names!</h3>
         <ul>
           <li>swagner23q</li>
         </ul>
+        <div class="userProfiles">
+          Stuff
+        </div>
 
       </div>
-
-
-
-
 
 
     </div>
