add scrollbar styling and background img

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a href="#snoop"><span class="headerButton floating">Let's Snoop</span></a>
     </header>
     <div class="overLord">
-      <h1>Snoop Around</h1>
-      <div class="column1" id="snoop">
+      <h1 id="snoop">Snoop Around</h1>
+      <div class="column1" >
         <p>So you want to snoop around in other people's repos? <br>
           Well you've come to the right place!
           <img src="http://www.animateit.net/data/media/smiley712/free-rolleye-smileys-442.gif"></p>
@@ -30,7 +30,7 @@
         <span class="namesHint">?</span>
         <ol>
           <div class="results">
-            <h3 class="h3">The Snooper Found This For you, Snooper</h3>
+            <h3>The Snooper Found This For you, Snooper</h3>
           </div>
         </ol>
       </div>
@@ -44,7 +44,9 @@
     </div>
 
     <footer>
-      <p>&#169;2016</p>
+
+      <p>Snoopin Since Forever<br>
+        &#169;2016</p>
     </footer>
   </body>
 </html>
