--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#snoop"><span class="headerButton floating">Let's Snoop</span></a>
     </header>
     <div class="overLord">
-      <h1 id="snoop">Snoop Around</h1>
+      <h1 id="snoop">Snooping Grounds</h1>
       <div class="column1" >
         <p>So you want to snoop around in other people's repos? <br>
           Well you've come to the right place!
